#Refactor commit
Для улучшения качества кода:
- внесены изменения в контроллеры.
- внесены изменения в юнит тесты.
